--- a/admin/application/lib/css/websitesapp.less
+++ b/admin/application/lib/css/websitesapp.less
@@ -13,17 +13,12 @@
 	font-style: normal;
 }
 
-
 body, h1, h2, h3, h4, h5, h6,
 .uk-navbar-nav > li > a { font-family: "ProximaNovaLight", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-.uk-badge a {
-	color: white;
-}
+.uk-badge a { color: white; }
 
-.ws-background {
-	background-color: #252525;
-}
+.ws-background { background-color: #252525; }
 
 .ws-navbar {
 	position: relative;
@@ -67,7 +62,11 @@ body, h1, h2, h3, h4, h5, h6,
 }
 
 .ws-footer {
-	padding: 50px 0 0 0;
+	padding: 30px 10px 10px 10px;
+	a {
+		color: @brand-color;
+		text-decoration: none;
+	}
 }
 
 
@@ -435,3 +434,4 @@ ul#layout-selector li input.layout-selector { margin: 5px auto;display: block;}
 .selected {
 	color: white !important;
 }
+
