Further work on multilanguage.

--- a/application/views/layouts/index-content-fr.html
+++ b/application/views/layouts/index-content-fr.html
@@ -57,7 +57,7 @@
 	<div id='footer-wrapper'>
 		<div class='footer'>
 			<div class='footer-left'>{$placeholder_4}</div>
-			<div class='footer-right'>{$placeholder_5}</div>
+			<div class='footer-right'>{$placeholder_5}{$placeholder_6}</div>
 			<div class='clear'>&nbsp;</div>
 		</div>
 	</div><!-- /footer-wrapper -->
